#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT([LinuxDC++], [0.09])
AC_CONFIG_SRCDIR([linux/wulfor.cc])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB

#To remove -O2 and -g, O2 makes g++ fail and -g makes binaries so damn big
#CXXFLAGS=

# Checks for libraries.
AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([m], [cos])
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([z], [inflate])
AC_CHECK_LIB([bz2], [BZ2_bzCompressInit])

#We use pkgconfig for gtkmm
#First check for pkg-config (stolen from teh net somwhere =)
AC_PATH_PROG(PKGCONFIG_CONFIG, pkg-config, no)
if test x$PKGCONFIG_CONFIG = xno; then
	AC_MSG_ERROR(Please install the pkg-config program)
fi

#Now we can check for the actual gtkmm package 
#If this doesn't work, remember to run aclocal before autoconf
PKG_CHECK_MODULES(GTKMM, gtkmm-2.0 >= 2.2.0)

#we remove sigc++ from the flags, 
#since the template functions in the standard headers are not sufficiant
#TODO: check if people have grep before doing this
GTKMM_CFLAGS_MANGLED= 
for LIB in $GTKMM_CFLAGS; do
	if [ ! [ `echo "$LIB" | grep sigc` ] ]; then
		GTKMM_CFLAGS_MANGLED="$GTKMM_CFLAGS_MANGLED $LIB"
	fi
done

#now we remove sigc++ from the libs, we link with our own version instead
GTKMM_LIBS_MANGLED= 
for LIB in $GTKMM_LIBS; do
	if [ ! [ `echo "$LIB" | grep sigc` ] ]; then
		GTKMM_LIBS_MANGLED="$GTKMM_LIBS_MANGLED $LIB"
	fi
done

AC_SUBST(GTKMM_CFLAGS_MANGLED)
AC_SUBST(GTKMM_LIBS_MANGLED)

#From dc++'s file, checks for stlport
AC_MSG_CHECKING([for STLPort])
AC_LANG_PUSH(C++)
AC_COMPILE_IFELSE(
	[AC_LANG_PROGRAM(
		[[
#ifndef _STLPORT_VERSION
#error No STLPort
#endif
		]]
	)],
	[AC_MSG_RESULT([yes])],
	[AC_MSG_RESULT([no])]
)
AC_LANG_POP

#Rest of the file is autogenerated...

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h locale.h malloc.h memory.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/ioctl.h sys/sendfile.h sys/socket.h sys/time.h unistd.h utime.h asm/atomic.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_REPLACE_FNMATCH
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRERROR_R
AC_FUNC_STRFTIME
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([ftruncate gethostbyname gethostname gettimeofday inet_ntoa memset mkdir pow select setlocale socket strerror strstr uname utime])

AC_CONFIG_FILES([Makefile
                 client/Makefile
                 linux/Makefile
                 sigc++/Makefile
                 sigcx/Makefile])
AC_OUTPUT
