lib_LIBRARIES = libdcpp.a

libdcpp_a_SOURCES= \
ADLSearch.cpp                FavoriteUser.h           ShareManager.h \
ADLSearch.h                  File.h                   SimpleXML.cpp \
AdcCommand.h                 FilteredFile.h           SimpleXML.h \
AdcHub.cpp                   FinishedManager.cpp      Singleton.h \
AdcHub.h                     FinishedManager.h        Socket.cpp \
BZUtils.cpp                  HashManager.cpp          Socket.h \
BZUtils.h                    HashManager.h            Speaker.h \
BitInputStream.h             HashValue.h              StringDefs.cpp \
BitOutputStream.h            HttpConnection.cpp       StringDefs.h \
BloomFilter.h                HttpConnection.h         StringSearch.h \
BufferedSocket.cpp           HubManager.cpp           StringTokenizer.cpp \
BufferedSocket.h             HubManager.h             StringTokenizer.h \
CID.h                        LogManager.cpp           Thread.cpp \
Client.cpp                   LogManager.h             Thread.h \
Client.h                     MerkleTree.h             TigerHash.cpp \
ClientManager.cpp            NmdcHub.cpp              TigerHash.h \
ClientManager.h              NmdcHub.h                TimerManager.cpp \
ClientManagerListener.h      Pointer.h                TimerManager.h \
ConnectionManager.cpp        QueueItem.h              UploadManager.cpp \
ConnectionManager.h          QueueManager.cpp         UploadManager.h \
ConnectionManagerListener.h  QueueManager.h           User.cpp \
CriticalSection.h            QueueManagerListener.h   User.h \
CryptoManager.cpp            ResourceManager.cpp      UserCommand.h \
CryptoManager.h              ResourceManager.h        UserConnection.cpp \
DCPlusPlus.cpp               SFVReader.cpp            UserConnection.h \
DCPlusPlus.h                 SFVReader.h              Util.cpp \
DirectoryListing.cpp         SearchManager.cpp        Util.h \
DirectoryListing.h           SearchManager.h          ZUtils.cpp \
DownloadManager.cpp          SearchManagerListener.h  ZUtils.h \
DownloadManager.h            Semaphore.h              config.h \
Encoder.cpp                  ServerSocket.cpp         stdinc.cpp \
Encoder.h                    ServerSocket.h           stdinc.h \
Exception.cpp                SettingsManager.cpp      version.h \
Exception.h                  SettingsManager.h \
FastAlloc.h                  ShareManager.cpp
