lib_LIBRARIES = libsigc.a
INCLUDES        = -I..

libsigc_a_SOURCES= \
adaptor.cc     class_slot.h    method_slot.h   object_slot.h    signal.h \
adaptor.h      connection.cc   node.cc         retype.h         slot.cc \
bind.cc        connection.h    node.h          retype_return.h  slot.h \
bind.h         hide.h          object.cc       sigc++.h         trait.h \
bind_return.h  marshal.h       object.h        sigcconfig.h \
class_slot.cc  method_slot.cc  object_slot.cc  signal.cc 
