lib_LIBRARIES	= libsigcx.a
INCLUDES		= @GTKMM_CFLAGS_MANGLED@ -I..

libsigcx_a_SOURCES= \
bind3.h      gtk_dispatch.cc  thread.cc           timeval.h \
convert.cc   gtk_dispatch.h   thread.h            tunnel.h \
convert.h    ref_slot.h       thread_tunnel.cc  util.cc \
dispatch.cc  sigcxconfig.h    thread-pthreads.cc  thread_tunnel.h   util.h \
dispatch.h   thread-pthreads.h   timeval.cc
